--- a/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
+++ b/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
@@ -57,7 +57,7 @@
 
 
           <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="sendResearch()">Go</button>
+            <button class="btn btn-outline-secondary" data-target="#card-element-616950" data-toggle="collapse" type="button" id="button-addon2" (click)="sendResearch()">Go</button>
           </div>
         </div>
       </div>
