--- a/src/app/Buyer/categories/categories.component.css
+++ b/src/app/Buyer/categories/categories.component.css
@@ -35,6 +35,15 @@
     background-position: center right 5px;
     background-repeat: no-repeat;
 }
+
+.arrowHead2{
+    background-color: #f7f7f7;
+    border: 2px #1a1a1a;
+    font-size: 0.7rem;
+    color: #1a1a1a;
+    background-size: 12px;
+    text-align: center;
+}
 @media screen and (max-width: 768px) {
     .categories {
         margin-left:15px;
