--- a/src/app/Buyer/home-background/home-background.component.css
+++ b/src/app/Buyer/home-background/home-background.component.css
@@ -29,11 +29,13 @@
     background:none;
     text-align:center;
     display:inline-block;
+    outline-style: none;
     opacity:0.6
 }
 
 .img {
     width:4em;
+    outline-style: none;
 }
 
 @media screen and (max-width: 769px) {
