--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning row navBar">
     <a class="navbar-brand col-1" routerLink="/home">
-      <img class="websiteLogo" src="../../../assets/ADP_symbole_logo_noir.png" alt="logo">
+      <img class="websiteLogo" src="../../../assets/ADP_symbole_logo_orange.png" alt="logo">
     </a>
 
     <form class="my-lg-0 col-8 col-lg-2 col-sm-5">
@@ -49,7 +49,7 @@
       <div class="modal-body row">
         <div class="col-md-6 modal-left">
           <div class="logo">
-            <img class="websiteLogo" src="../../../assets/ADP_symbole_logo_noir.png" alt="logo">
+            <img class="websiteLogoModal" src="../../../assets/ADP_symbole_logo_noir.png" alt="logo">
           </div>
 
           <div class="text-inscription">
