--- a/src/app/Buyer/buyer-home/search-immat/search-immat.component.html
+++ b/src/app/Buyer/buyer-home/search-immat/search-immat.component.html
@@ -1,7 +1,7 @@
 <div id="card-474031">
   <div class="card">
     
-       <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-474031" href="#card-element-946263"><div class="card-header">Immatriculation<p class="float-right arrow">&#8964;</p>
+       <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-474031" href="#card-element-946263"><div class="card-header">IMMATRICULATION<p class="float-right arrow">&#8964;</p>
     </div></a>
     <div id="card-element-946263" class="collapse">
       <div class="card-body">
