--- a/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
+++ b/src/app/Buyer/buyer-home/search-vhl/search-vhl.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-74095" href="#card-element-616950">
       <div class="card-header">
-        Véhicule
+        VEHICULE
 
         <p class="float-right arrow">&#8964;</p>
       </div>
