--- a/src/app/Seller/page-announce-pro/tab-categories/tab-categories.component.html
+++ b/src/app/Seller/page-announce-pro/tab-categories/tab-categories.component.html
@@ -31,23 +31,23 @@
             </a>
           </p>
           <div class="collapse" id="collapseFourche">
-              <button class="btn partBtn">Fourche Complète</button>
-              <button class="btn partBtn">Tube de Fourche Gauche</button>
-              <button class="btn partBtn">Tube de Fourche Droit</button>
-              <button class="btn partBtn">Té supérieur</button>
-              <button class="btn partBtn">Té inférieur</button>
+            <button class="btn partBtn">Fourche Complète</button>
+            <button class="btn partBtn">Tube de Fourche Gauche</button>
+            <button class="btn partBtn">Tube de Fourche Droit</button>
+            <button class="btn partBtn">Té supérieur</button>
+            <button class="btn partBtn">Té inférieur</button>
           </div>
 
           <p>
-            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapseBrasOscillant" role="button" aria-expanded="false"
-              aria-controls="collapseBrasOscillant">
+            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapseBrasOscillant" role="button"
+              aria-expanded="false" aria-controls="collapseBrasOscillant">
               Bras Oscillant <i class="material-icons">arrow_drop_down</i>
             </a>
           </p>
           <div class="collapse" id="collapseBrasOscillant">
-              <button class="btn partBtn">Bras Oscillant Complet</button>
-              <button class="btn partBtn">Axe de Bras Oscillant</button>
-              <button class="btn partBtn">Tendeur de chaine</button>
+            <button class="btn partBtn">Bras Oscillant Complet</button>
+            <button class="btn partBtn">Axe de Bras Oscillant</button>
+            <button class="btn partBtn">Tendeur de chaine</button>
           </div>
 
           <p>
@@ -57,8 +57,8 @@
             </a>
           </p>
           <div class="collapse" id="collapseBequille">
-              <button class="btn partBtn">Béquille Latérale</button>
-              <button class="btn partBtn">Béquille Centrale</button>
+            <button class="btn partBtn">Béquille Latérale</button>
+            <button class="btn partBtn">Béquille Centrale</button>
           </div>
 
 
@@ -69,8 +69,8 @@
             </a>
           </p>
           <div class="collapse" id="collapseAmortArr">
-              <button class="btn partBtn">Amortisseur Complet</button>
-              <button class="btn partBtn">Biellette d'Amortisseur</button>
+            <button class="btn partBtn">Amortisseur Complet</button>
+            <button class="btn partBtn">Biellette d'Amortisseur</button>
           </div>
 
           <p>
@@ -80,33 +80,33 @@
             </a>
           </p>
           <div class="collapse" id="collapseGuidon">
-              <button class="btn partBtn">Guidon</button>
-              <button class="btn partBtn">Rétroviseur Gauche</button>
-              <button class="btn partBtn">Rétroviseur Droit</button>
-              <button class="btn partBtn">Poignée de Gaz</button>
-              <button class="btn partBtn">Cocotte d'Embrayage</button>
-              <button class="btn partBtn">Levier d'Embrayage</button>
-              <button class="btn partBtn">Levier de frein</button>
-              <button class="btn partBtn">Embout de guidon</button>
+            <button class="btn partBtn">Guidon</button>
+            <button class="btn partBtn">Rétroviseur Gauche</button>
+            <button class="btn partBtn">Rétroviseur Droit</button>
+            <button class="btn partBtn">Poignée de Gaz</button>
+            <button class="btn partBtn">Cocotte d'Embrayage</button>
+            <button class="btn partBtn">Levier d'Embrayage</button>
+            <button class="btn partBtn">Levier de frein</button>
+            <button class="btn partBtn">Embout de guidon</button>
           </div>
 
           <p>
-            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapsePlatineReposePied" role="button" aria-expanded="false"
-              aria-controls="collapsePlatineReposePied">
+            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapsePlatineReposePied" role="button"
+              aria-expanded="false" aria-controls="collapsePlatineReposePied">
               Platine Repose Pied <i class="material-icons">arrow_drop_down</i>
             </a>
           </p>
           <div class="collapse" id="collapsePlatineReposePied">
-              <button class="btn partBtn">Platine Avant Gauche</button>
-              <button class="btn partBtn">Platine Avant Droite</button>
-              <button class="btn partBtn">Platine Arrière Gauche</button>
-              <button class="btn partBtn">Platine Arrière Droite</button>
-              <button class="btn partBtn">Repose Pied Avant Gauche</button>
-              <button class="btn partBtn">Repose Pied Avant Droite</button>
-              <button class="btn partBtn">Repose Pied Arrière Gauche</button>
-              <button class="btn partBtn">Repose Pied Arrière Droite</button>
-              <button class="btn partBtn">Pédale de frein</button>
-              <button class="btn partBtn">Sélecteur de vitesse</button>
+            <button class="btn partBtn">Platine Avant Gauche</button>
+            <button class="btn partBtn">Platine Avant Droite</button>
+            <button class="btn partBtn">Platine Arrière Gauche</button>
+            <button class="btn partBtn">Platine Arrière Droite</button>
+            <button class="btn partBtn">Repose Pied Avant Gauche</button>
+            <button class="btn partBtn">Repose Pied Avant Droite</button>
+            <button class="btn partBtn">Repose Pied Arrière Gauche</button>
+            <button class="btn partBtn">Repose Pied Arrière Droite</button>
+            <button class="btn partBtn">Pédale de frein</button>
+            <button class="btn partBtn">Sélecteur de vitesse</button>
           </div>
 
           <p>
@@ -116,23 +116,23 @@
             </a>
           </p>
           <div class="collapse" id="collapseFreinAvant">
-              <button class="btn partBtn">Frein Avant Complet</button>
-              <button class="btn partBtn">Maire Cylindre</button>
-              <button class="btn partBtn">Disque de Frein</button>
-              <button class="btn partBtn">Durite de Frein</button>
+            <button class="btn partBtn">Frein Avant Complet</button>
+            <button class="btn partBtn">Maire Cylindre</button>
+            <button class="btn partBtn">Disque de Frein</button>
+            <button class="btn partBtn">Durite de Frein</button>
           </div>
 
           <p>
-            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapseFreinArriere" role="button" aria-expanded="false"
-              aria-controls="collapseFreinArriere">
+            <a class="btn subsectionBtn" data-toggle="collapse" href="#collapseFreinArriere" role="button"
+              aria-expanded="false" aria-controls="collapseFreinArriere">
               Frein Arrière <i class="material-icons">arrow_drop_down</i>
             </a>
           </p>
           <div class="collapse" id="collapseFreinArriere">
-              <button class="btn partBtn">Frein Arrière Complet</button>
-              <button class="btn partBtn">Maire Cylindre</button>
-              <button class="btn partBtn">Disque de Frein</button>
-              <button class="btn partBtn">Durite de Frein</button>
+            <button class="btn partBtn">Frein Arrière Complet</button>
+            <button class="btn partBtn">Maire Cylindre</button>
+            <button class="btn partBtn">Disque de Frein</button>
+            <button class="btn partBtn">Durite de Frein</button>
           </div>
 
           <p>
@@ -142,10 +142,10 @@
             </a>
           </p>
           <div class="collapse" id="collapseJantes">
-              <button class="btn partBtn">Jantes Avant</button>
-              <button class="btn partBtn">Jantes Arrière</button>
-              <button class="btn partBtn">Axe de Roue Avant</button>
-              <button class="btn partBtn">Axe de Roue Arrière</button>
+            <button class="btn partBtn">Jantes Avant</button>
+            <button class="btn partBtn">Jantes Arrière</button>
+            <button class="btn partBtn">Axe de Roue Avant</button>
+            <button class="btn partBtn">Axe de Roue Arrière</button>
           </div>
         </div>
       </div>
@@ -349,7 +349,7 @@
       <p>
         <a class="btn sectionBtn" data-toggle="collapse" href="#collapseHabillage" role="button" aria-expanded="false"
           aria-controls="collapseHabillage">
-          Partie Habillage 
+          Partie Habillage
         </a>
       </p>
       <div class="collapse" id="collapseHabillage">
@@ -377,7 +377,7 @@
             <button class="btn partBtn">Capot Selle</button>
             <button class="btn partBtn">Fermeture Selle</button>
           </div>
-          
+
           <p>
             <a class="btn subsectionBtn" data-toggle="collapse" href="#collapseCarénages" role="button" aria-expanded="false"
               aria-controls="collapseCarénages">
@@ -424,7 +424,7 @@
           <p>
             <button type="button" class="btn btn-primary">Protège Chaine</button>
           </p>
-          
+
           <p>
             <button type="button" class="btn btn-primary">Protège Roue</button>
           </p>
