--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -22,18 +22,18 @@
             <span class="numberOfArticles">{{nbArticles}}</span>
           </a>
         </div>
-        
+
         <!-- TODO: *ngIf on the two next li for connected people and not connected people -->
         <div class="nav-item compte offset-lg-1 col-lg-1">
-          <a class="nav-link" (click)="click()" data-toggle= "modal"  [attr.data-target]="'#' + modal">
-              <i class="material-icons">account_circle</i>
+          <a class="nav-link" (click)="click()" data-toggle="modal" [attr.data-target]="'#' + modal">
+            <i class="material-icons">account_circle</i>
           </a>
         </div>
 
         <div class="nav-item  exit offset-sm-1 col-sm-1">
           <a class="nav-link" *ngIf="buyerService.isUserLoggedIn()" class="deco" (click)="logout()" routerLink="/home">
 
-              <i class="material-icons">exit_to_app</i>
+            <i class="material-icons">exit_to_app</i>
           </a>
         </div>
       </div>
@@ -72,45 +72,28 @@
 
           <form class="form-horizontal" role="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
-              <input
-                  formControlName="email"
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  placeholder="Email"
-                  [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                  <div
-                  *ngIf="submitted && f.email.errors"
-                  class="invalid-feedback"
-                >
-                  <div *ngIf="f.email.errors.required">champ requis</div>
-                  <div *ngIf="f.email.errors.email">
-                    un email valide est requis
-                  </div>
-            </div>
+              <input formControlName="email" type="email" class="form-control" id="email" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">champ requis</div>
+                <div *ngIf="f.email.errors.email">
+                  un email valide est requis
+                </div>
+              </div>
             </div>
 
             <div class="form-group">
-              <input
-                  formControlName="password"
-                  type="password"
-                  class="form-control"
-                  id="password"
-                  placeholder="Password"
-                  [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            
-                <div
-                  *ngIf="submitted && f.password.errors"
-                  class="invalid-feedback"
-                >
-                  <div *ngIf="f.password.errors.required">champs requis</div>
-                  <div *ngIf="f.password.errors.minlength">
-                    Le mot de passe doit avoir au moins 8 caractères
-                  </div>
+              <input formControlName="password" type="password" class="form-control" id="password" placeholder="Password"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+
+              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">champs requis</div>
+                <div *ngIf="f.password.errors.minlength">
+                  Le mot de passe doit avoir au moins 8 caractères
                 </div>
-                <div *ngIf="erreurConnection" class="erreurConnection">
-                  email et/ou mot de passe erroné
-                </div>
+              </div>
+              <div *ngIf="erreurConnection" class="erreurConnection">
+                email et/ou mot de passe erroné
+              </div>
             </div>
 
             <div class="form-group">
@@ -123,9 +106,7 @@
             </div>
 
             <div class="form-group">
-              <button type="submit"  
-              data-dismiss="mod" 
-              class="btn btn-warning btn-connex">Se
+              <button type="submit" data-dismiss="mod" class="btn btn-warning btn-connex">Se
                 connecter </button>
             </div>
           </form>
