--- a/src/app/Sign-up/creation-compte/creation-compte.component.html
+++ b/src/app/Sign-up/creation-compte/creation-compte.component.html
@@ -12,51 +12,32 @@
     <div class="col-12">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="account__box ">
-          <div class="account__box__title mb-3"><h5>Vos identifiants</h5></div>
+          <div class="account__box__title mb-3">
+            <h5>Vos identifiants</h5>
+          </div>
           <div class="box_inner">
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Email</label>
-              
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Email</label>
+
               <div class="col-md-6">
-                <input
-                  formControlName="email"
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  [ngClass]="{ 'is-invalid': (submitted && f.email.errors) || emailExistant }"
-                />
-                <div
-                  *ngIf="(submitted && f.email.errors)"
-                  class="invalid-feedback"
-                >
+                <input formControlName="email" type="email" class="form-control" id="email" [ngClass]="{ 'is-invalid': (submitted && f.email.errors) || emailExistant }" />
+                <div *ngIf="(submitted && f.email.errors)" class="invalid-feedback">
                   <div *ngIf="f.email.errors.required">champ requis</div>
                   <div *ngIf="f.email.errors.email">
                     un email valide est requis
-                  </div> 
-                </div>              
-                  <div *ngIf="emailExistant" class="invalid-feedback">
-                    cet email est déjà utilisé
                   </div>
-                
+                </div>
+                <div *ngIf="emailExistant" class="invalid-feedback">
+                  cet email est déjà utilisé
+                </div>
+
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Mot de passe</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Mot de passe</label>
               <div class="col-md-6">
-                <input
-                  formControlName="password"
-                  type="password"
-                  class="form-control"
-                  id="password"
-                  [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.password.errors"
-                  class="invalid-feedback"
-                >
+                <input formControlName="password" type="password" class="form-control" id="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                   <div *ngIf="f.password.errors.required">champs requis</div>
                   <div *ngIf="f.password.errors.minlength">
                     Le mot de passe doit avoir au moins 8 caractères
@@ -65,23 +46,13 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Confirmation mot de passe</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Confirmation mot de passe</label>
               <div class="col-md-6">
-                <input
-                  type="password"
-                  formControlName="confirmPassword"
-                  class="form-control"
-                  id="confirmPassword"
+                <input type="password" formControlName="confirmPassword" class="form-control" id="confirmPassword"
                   [ngClass]="{
                     'is-invalid': submitted && f.confirmPassword.errors
-                  }"
-                />
-                <div
-                  *ngIf="submitted && f.confirmPassword.errors"
-                  class="invalid-feedback"
-                >
+                  }" />
+                <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                   <div *ngIf="f.confirmPassword.errors.required">
                     champs requis
                   </div>
@@ -95,92 +66,46 @@
         </div>
 
         <div class="account__box ">
-          <div class="account__box__title mb-3"><h5>Vos coordonnées</h5></div>
+          <div class="account__box__title mb-3">
+            <h5>Vos coordonnées</h5>
+          </div>
           <div class="box_inner">
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Civilité</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Civilité</label>
               <div class="col-md-6 pt-2">
                 <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="inlineRadio1"
-                    value="monsieur"
-                    formControlName="civilite"
-                  />
-                  <label class="form-check-label" for="inlineRadio1"
-                    >Monsieur</label
-                  >
+                  <input class="form-check-input" type="radio" id="inlineRadio1" value="monsieur" formControlName="civilite" />
+                  <label class="form-check-label" for="inlineRadio1">Monsieur</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="inlineRadio2"
-                    value="madame"
-                    formControlName="civilite"
-                  />
-                  <label class="form-check-label" for="inlineRadio2"
-                    >Madame</label
-                  >
+                  <input class="form-check-input" type="radio" id="inlineRadio2" value="madame" formControlName="civilite" />
+                  <label class="form-check-label" for="inlineRadio2">Madame</label>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Prénom</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Prénom</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="prenom"
-                  class="form-control"
-                  id="prenom"
-                  [ngClass]="{ 'is-invalid': submitted && f.prenom.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.prenom.errors"
-                  class="invalid-feedback"
-                >
+                <input type="text" formControlName="prenom" class="form-control" id="prenom" [ngClass]="{ 'is-invalid': submitted && f.prenom.errors }" />
+                <div *ngIf="submitted && f.prenom.errors" class="invalid-feedback">
                   <div *ngIf="f.prenom.errors.required">champs requis</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Nom</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Nom</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="nom"
-                  class="form-control"
-                  id="nom"
-                  [ngClass]="{ 'is-invalid': submitted && f.nom.errors }"
-                />
+                <input type="text" formControlName="nom" class="form-control" id="nom" [ngClass]="{ 'is-invalid': submitted && f.nom.errors }" />
                 <div *ngIf="submitted && f.nom.errors" class="invalid-feedback">
                   <div *ngIf="f.nom.errors.required">champs requis</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Téléphone</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Téléphone</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="telephone"
-                  class="form-control"
-                  id="telephone"
-                  [ngClass]="{ 'is-invalid': submitted && f.telephone.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.telephone.errors"
-                  class="invalid-feedback"
-                >
+                <input type="text" formControlName="telephone" class="form-control" id="telephone" [ngClass]="{ 'is-invalid': submitted && f.telephone.errors }" />
+                <div *ngIf="submitted && f.telephone.errors" class="invalid-feedback">
                   <div *ngIf="f.telephone.errors.required">champs requis</div>
                   <div *ngIf="f.telephone.errors.pattern">le numéro doit avoir 10 chiffres</div>
                 </div>
@@ -188,73 +113,34 @@
             </div>
 
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >N° et Rue</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">N° et Rue</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="adresse1"
-                  class="form-control"
-                  id="adresse1"
-                  [ngClass]="{ 'is-invalid': submitted && f.adresse1.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.adresse1.errors"
-                  class="invalid-feedback"
-                >
+                <input type="text" formControlName="adresse1" class="form-control" id="adresse1" [ngClass]="{ 'is-invalid': submitted && f.adresse1.errors }" />
+                <div *ngIf="submitted && f.adresse1.errors" class="invalid-feedback">
                   <div *ngIf="f.adresse1.errors.required">champs requis</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Comlément Adresse</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Comlément Adresse</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="adresse2"
-                  class="form-control"
-                />
+                <input type="text" formControlName="adresse2" class="form-control" />
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Code Postal</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Code Postal</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="codepostal"
-                  class="form-control"
-                  id="codepostal"
-                  [ngClass]="{ 'is-invalid': submitted && f.codepostal.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.codepostal.errors"
-                  class="invalid-feedback"
-                >
+                <input type="text" formControlName="codepostal" class="form-control" id="codepostal" [ngClass]="{ 'is-invalid': submitted && f.codepostal.errors }" />
+                <div *ngIf="submitted && f.codepostal.errors" class="invalid-feedback">
                   <div *ngIf="f.codepostal.errors.required">champs requis</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Ville</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Ville</label>
               <div class="col-md-6">
-                <input
-                  type="text"
-                  formControlName="ville"
-                  class="form-control"
-                  id="ville"
-                  [ngClass]="{ 'is-invalid': submitted && f.ville.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.ville.errors"
-                  class="invalid-feedback"
-                >
+                <input type="text" formControlName="ville" class="form-control" id="ville" [ngClass]="{ 'is-invalid': submitted && f.ville.errors }" />
+                <div *ngIf="submitted && f.ville.errors" class="invalid-feedback">
                   <div *ngIf="f.ville.errors.required">champs requis</div>
                 </div>
               </div>
