--- a/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
+++ b/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
@@ -6,29 +6,16 @@
       </div>
     </div>
   </div>
-
-<div class="row">
-  <div class="col-12">
+  <div class="row">
+    <div class="col-12">
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-      <div class="account__box ">
-        <div class="box_inner">
-
-          <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Nouveau mot de passe</label
-              >
+        <div class="account__box ">
+          <div class="box_inner">
+            <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Nouveau mot de passe</label>
               <div class="col-md-6">
-                <input
-                  formControlName="password"
-                  type="password"
-                  class="form-control"
-                  id="password"
-                  [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-                />
-                <div
-                  *ngIf="submitted && f.password.errors"
-                  class="invalid-feedback"
-                >
+                <input formControlName="password" type="password" class="form-control" id="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                   <div *ngIf="f.password.errors.required">champs requis</div>
                   <div *ngIf="f.password.errors.minlength">
                     Le mot de passe doit avoir au moins 8 caractères
@@ -37,23 +24,13 @@
               </div>
             </div>
             <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Confirmation mot de passe</label
-              >
+              <label for="colFormLabel" class="label col-md-3 col-form-label">Confirmation mot de passe</label>
               <div class="col-md-6">
-                <input
-                  type="password"
-                  formControlName="confirmPassword"
-                  class="form-control"
-                  id="confirmPassword"
+                <input type="password" formControlName="confirmPassword" class="form-control" id="confirmPassword"
                   [ngClass]="{
                     'is-invalid': submitted && f.confirmPassword.errors
-                  }"
-                />
-                <div
-                  *ngIf="submitted && f.confirmPassword.errors"
-                  class="invalid-feedback"
-                >
+                  }" />
+                <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                   <div *ngIf="f.confirmPassword.errors.required">
                     champs requis
                   </div>
@@ -63,32 +40,16 @@
                 </div>
               </div>
             </div>
-          <!-- <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Nouveau mot de passe</label
-              >
-              <div class="col-md-6">
-                <input type="password" class="form-control" id="prenom" />
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Confirmation mot de passe</label
-              >
-              <div class="col-md-6">
-                <input type="password" class="form-control" id="nom" />
-              </div>
-          </div> -->
-          <div *ngIf="submitted" class="form-group row">
+            <div *ngIf="submitted" class="form-group row">
               <div class="col-md-6 offset-md-3">
-              <p>Mise à jour effectuée</p>
+                <p>Mise à jour effectuée</p>
+              </div>
             </div>
-          </div>
-          <div>
+            <div>
               <button type="submit" class="btn mb-2">Validez</button>
+            </div>
           </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
-</div>
