float-right chevron dans admin

--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -23,7 +23,7 @@
         <tr>
           <th>
             Raison Sociale
-            <a (click)="sortBy('raisonSociale')"><i class="material-icons trier">keyboard_arrow_down</i></a>
+            <a (click)="sortBy('raisonSociale')"><i class="material-icons float-right trier">keyboard_arrow_down</i></a>
           </th>
           <th>
             Adresse
@@ -33,7 +33,7 @@
           </th>
           <th>
             Ville
-            <a (click)="sortBy('ville')"><i class="material-icons trier">keyboard_arrow_down</i></a>
+            <a (click)="sortBy('ville')"><i class="material-icons float-right trier">keyboard_arrow_down</i></a>
           </th>
           <th>
             Tel
