--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -102,27 +102,26 @@
         <div class="row">
           <div class="card bikeSectionContainer col-md-3" *ngFor="let categorie of motoCategories.categories ; let indexCategorie = index">
             <div class="card-header" id="headingOne">
-              <h5 class="mb-0">
                   <a class="btn btn-link bikeSectionLinkBtn" data-toggle="collapse" href="#collapseCycle+{{indexCategorie}}" aria-expanded="true"
                     aria-controls="collapseOne">
                     <button mat-button class="bikeSectionBtn">
                       {{categorie.name}} 
                     </button>
                   </a>
-              </h5>
             </div>
 
             <div *ngFor="let sousCategorie of categorie.sousCategories ; let i = index" id="collapseCycle+{{indexCategorie}}"
-              class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                <a class="btn btn-link bikeSubSectionLBtn" data-toggle="collapse" href="#collapseCadre+{{indexCategorie}}+{{i}}"
+              class="collapse subSectionCollapse" aria-labelledby="headingOne" data-parent="#accordion">
+                <a class="btn btn-link bikeSubSectionBtn" data-toggle="collapse" href="#collapseCadre+{{indexCategorie}}+{{i}}"
                   aria-expanded="true" aria-controls="collapseTwo">
-                  <button mat-raised-button class="bikeSubSectionBtn">
-                    {{sousCategorie.name}}
-                    <i class="material-icons">keyboard_arrow_down</i>
+                  <button mat-button class="bikeSubSectionBtn mat-elevation-z4">
+                    <span class="subSectionName">{{sousCategorie.name}}
+                      <i class="material-icons float-right drop">keyboard_arrow_down</i>
+                    </span>
                   </button>
                 </a>
               <div *ngFor="let sousSousCategorie of sousCategorie.sousSousCategories" id="collapseCadre+{{indexCategorie}}+{{i}}"
-                class="collapse" aria-labelledby="headingTwo" data-parent="#collapseOne">
+                class="collapse bikePartCollapse" aria-labelledby="headingTwo" data-parent="#collapseOne">
                   <button mat-button type="button" class="bikePartsBtn" (click)="getPieceName($event.target.innerText)">
                     {{sousSousCategorie.name}}
                   </button>
