--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -1,8 +1,8 @@
 <div class="container sortFilterContainer mt-5">
-  <mat-form-field>
-    <mat-select [(value)]="filterSelect" placeholder="Type de filtre">
-      <mat-option value="rs">Raison Sociale</mat-option>
-      <mat-option value="cp">Code Postal</mat-option>
+  <mat-form-field [color]="options.value.color">
+    <mat-select [(value)]="filterSelect" placeholder="Filtre par :">
+      <mat-option value="rs">Raison sociale</mat-option>
+      <mat-option value="cp">Code postal</mat-option>
     </mat-select>
   </mat-form-field>
   <form [formGroup]="sortCompanyForm" (ngSubmit)="onSubmit()" class="searchForm">
